# uhmm-achtually

./: .gitignore  ARCHITECTURE_COMPARISON.md  BOT_STATUS.md  DEBUGGING_SESSION_SUMMARY.md  IMPLEMENTATION_SUMMARY_V2.md  LICENSE  MEETING_BAAS_V2_FLOW.md  QUICK_START_V2.md  README.md  REAL_TIME_FACT_CHECKING_REALITY_CHECK.md  REVERSE_ENGINEERING_PLAYGROUND_ARCHITECTURE.md  RUN_BOT.sh  pyproject.toml
backend/: bot.py  bot_direct.py  bot_simple.py  bot_v2.py  bot_voice.py  dev_config.yaml  main.py  pyproject.toml  run_websocket_server.sh  test_pipeline.py  test_v2_pipeline.py  verify_pydantic_ai.py
backend/scripts/: generate_token.py
backend/src/api/: dependencies.py
backend/src/api/http/: endpoints.py
backend/src/api/websocket/: connection_manager.py  handlers.py  messages.py  server.py
backend/src/config/: prompts.yaml
backend/src/core/fact_checking/: orchestrator.py  verification_service.py
backend/src/core/nlp/: claim_extraction_service.py  sentence_aggregator.py
backend/src/core/transcription/: service.py
backend/src/domain/exceptions/: __init__.py  custom_exceptions.py
backend/src/domain/interfaces/: __init__.py  search.py  stt.py
backend/src/domain/models/: __init__.py  claim.py  verdict.py
backend/src/frames/: custom_frames.py
backend/src/infrastructure/: __init__.py
backend/src/infrastructure/clients/: __init__.py  daily_client.py  exa_client.py  groq_client.py
backend/src/infrastructure/config/: __init__.py  prompts.yaml  settings.py
backend/src/models/: __init__.py  claim_models.py  verdict_models.py
backend/src/processors/: audio_stream_processor.py  claim_extractor.py  continuous_audio_aggregator.py  fact_check_messenger.py  pipeline_bridge.py  pipeline_coordinator.py  sentence_aggregator.py  verdict_formatter.py  web_fact_checker.py
backend/src/processors_v2/: __init__.py  claim_extractor_v2.py  fact_check_messenger_v2.py  pipeline_bridge.py  pipeline_coordinator.py  web_fact_checker_v2.py
backend/src/services/: daily_message_client.py  exa_client.py
backend/src/services/stt/: __init__.py  avalon_stt.py  groq_stt.py
backend/src/utils/: circuit_breaker.py  config.py  deduplication.py  logger.py  pipecat_patch.py
chrome-extension/: CHROME_EXTENSION_ARCHITECTURE.md  README.md  WEBSOCKET_API_SPEC.md  manifest.json
chrome-extension/background/: background.js
chrome-extension/content/: content.css  content.js
chrome-extension/icons/: README.md
chrome-extension/popup/: popup.css  popup.html  popup.js
cursor-hackathon/: BOT_DEPLOYMENT_GUIDE.md  CODE_REVIEW_AND_REFACTORING.md  DEVELOPER_A_PROMPT.md  DEVELOPER_B_PROMPT.md  DEVELOPER_C_PROMPT.md  ENHANCEMENT_VIRTUAL_HUMAN_TTS.md  START_HERE.md  TEAM_COORDINATION_GUIDE.md  WEBSOCKET_API_SPEC.md  architecture_design.md  realtime_meeting_fact_checker_spec.md
meeting-baas-transcriber/: .env.example  .gitignore  INTEGRATION_GUIDE.md  QUICK_TEST.md  README.md  REALTIME_INTEGRATION_STRATEGY.md  SETUP.md  SIMPLE_TEST.md  SPEAKING_BOT_INTEGRATION.md  check_bot.py  create_bot.py  hello_bot.py  pyproject.toml  run_server.py  setup_ngrok.sh  simple_fact_checker.py  test_chat_bot.py
meeting-baas-transcriber/src/: __init__.py  config.py  meeting_baas_client.py  models.py  webhook_server.py
(+9 files in other folders)
