[project]
name = "realtime-fact-checker"
version = "0.1.0"
description = "Real-time meeting fact-checker with STT and RAG"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
frontend = [
    "streamlit>=1.50.0",
    "streamlit-webrtc>=0.47.0",
]

LLM = [
    "bm25s>=0.1.0",
    "cerebras-cloud-sdk>=1.0.0",  # Cerebras for fast LLM
    "groq>=0.8.0",  # For Whisper STT (primary)
    "exa-py>=1.0.0",
    "supabase>=2.3.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "pystemmer>=2.2.0",
    "scipy>=1.12.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
]

dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "ipython>=8.22.0",
]
stretch = [
    "vosk>=0.3.45",  # For local STT (stretch goal)
    "pyaudio>=0.2.14",  # Audio capture for Vosk
    "torch>=2.0.0",  # For SileroSTT
    "torchaudio>=2.0.0",  # For SileroSTT
]